--- a/submission-lab2/myproject/main/templates/shop.html
+++ b/submission-lab2/myproject/main/templates/shop.html
@@ -859,7 +859,7 @@
                                 <a href="about-us.html">Terms</a>
                             </li>
                             <li>
-                                <a href="about-us.html">Privacy</a>
+                                <a href="home.html">Privacy</a>
                             </li>
                             <li>
                                 <a href="contact.html">Support</a>
