--- a/submission-lab2/myproject/main/templates/blog-2-colum.html
+++ b/submission-lab2/myproject/main/templates/blog-2-colum.html
@@ -347,159 +347,161 @@
         </div>
     </div>
     <!-- End Blog -->
-
-    <!-- Start Footer 
+<!-- Start Footer 
     ============================================= -->
-    <footer class="bg-dark text-light">
-        <div class="container">
-            <div class="f-items default-padding">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 item">
-                        <div class="f-item about">
-                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
-                            <p>
-                                Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy for you are out. Fertile how old address did showing.
-                            </p>
-                            <form action="#">
-                                <input type="email" placeholder="Your Email" class="form-control" name="email">
-                                <button type="submit"> <i class="arrow_right"></i></button>  
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6 item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Quick LInk</h4>
-                            <ul>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Home</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> About us</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Compnay History</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Features</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Blog Page</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Login</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 item">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Community</h4>
-                            <ul>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Career</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Leadership</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Strategy</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Services</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> History</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fas fa-angle-right"></i> Components</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 item">
-                        <div class="f-item contact-widget">
-                            <h4 class="widget-title">Contact Info</h4>
-                            <div class="address">
-                                <ul>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fas fa-home"></i>
-                                        </div>
-                                        <div class="content">
-                                            <strong>Address:</strong>
-                                            5919 Trussville Crossings Pkwy, Birmingham
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fas fa-envelope"></i>
-                                        </div>
-                                        <div class="content">
-                                            <strong>Email:</strong>
-                                            <a href="mailto:info@validtheme.com">info@validtheme.com</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="icon">
-                                            <i class="fas fa-phone"></i>
-                                        </div>
-                                        <div class="content">
-                                            <strong>Phone:</strong>
-                                            <a href="tel:2151234567">+123 34598768</a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+<footer class="bg-dark text-light">
+    <div class="container">
+        <div class="f-items default-padding">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 item">
+                    <div class="f-item about">
+                        <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
+                        <p>
+                            Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy
+                            for you are out. Fertile how old address did showing.
+                        </p>
+                        <form action="#">
+                            <input type="email" placeholder="Your Email" class="form-control" name="email">
+                            <button type="submit"> <i class="arrow_right"></i></button>
+                        </form>
                     </div>
                 </div>
-            </div>
-        </div>
-        <!-- Start Footer Bottom -->
-        <div class="footer-bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <p>&copy; Copyright 2021. All Rights Reserved by <a href="#">validthemes</a></p>
-                    </div>
-                    <div class="col-lg-6 text-end link">
+                <div class="col-lg-2 col-md-6 item">
+                    <div class="f-item link">
+                        <h4 class="widget-title">Quick LInk</h4>
                         <ul>
                             <li>
-                                <a href="#">Terms</a>
+                                <a href="index.html"><i class="fas fa-angle-right"></i> Home</a>
                             </li>
                             <li>
-                                <a href="#">Privacy</a>
+                                <a href="about-us.html"><i class="fas fa-angle-right"></i> About us</a>
                             </li>
                             <li>
-                                <a href="#">Support</a>
+                                <a href="about-us.html"><i class="fas fa-angle-right"></i> Compnay History</a>
+                            </li>
+                            <li>
+                                <a href="services.html"><i class="fas fa-angle-right"></i> Features</a>
+                            </li>
+                            <li>
+                                <a href="blog-with-sidebar.html"><i class="fas fa-angle-right"></i> Blog Page</a>
+                            </li>
+                            <li>
+                                <a href="about-us.html"><i class="fas fa-angle-right"></i> Login</a>
                             </li>
                         </ul>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 item">
+                    <div class="f-item link">
+                        <h4 class="widget-title">Community</h4>
+                        <ul>
+                            <li>
+                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Career</a>
+                            </li>
+                            <li>
+                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Leadership</a>
+                            </li>
+                            <li>
+                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Strategy</a>
+                            </li>
+                            <li>
+                                <a href="services.html"><i class="fas fa-angle-right"></i> Services</a>
+                            </li>
+                            <li>
+                                <a href="about-us.html"><i class="fas fa-angle-right"></i> History</a>
+                            </li>
+                            <li>
+                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Components</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 item">
+                    <div class="f-item contact-widget">
+                        <h4 class="widget-title">Contact Info</h4>
+                        <div class="address">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fas fa-home"></i>
+                                    </div>
+                                    <div class="content">
+                                        <strong>Address:</strong>
+                                        5919 Trussville Crossings Pkwy, Birmingham
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fas fa-envelope"></i>
+                                    </div>
+                                    <div class="content">
+                                        <strong>Email:</strong>
+                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fas fa-phone"></i>
+                                    </div>
+                                    <div class="content">
+                                        <strong>Phone:</strong>
+                                        <a href="tel:2151234567">+123 34598768</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- End Footer Bottom -->
-    </footer>
-    <!-- End Footer -->
+    </div>
+    <!-- Start Footer Bottom -->
+    <div class="footer-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <p>&copy; Copyright 2021. All Rights Reserved by <a
+                            href="https://themeforest.net/user/validthemes/portfolio">validthemes</a></p>
+                </div>
+                <div class="col-lg-6 text-end link">
+                    <ul>
+                        <li>
+                            <a href="about-us.html">Terms</a>
+                        </li>
+                        <li>
+                            <a href="about-us.html">Privacy</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Support</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Footer Bottom -->
+</footer>
+<!-- End Footer -->
 
-    <!-- jQuery Frameworks
+<!-- jQuery Frameworks
     ============================================= -->
-    <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
-    <script src="{% static 'assets/js/popper.min.js' %}"></script>
-    <script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'assets/js/jquery.appear.js' %}"></script>
-    <script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
-    <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'assets/js/modernizr.custom.13711.js' %}"></script>
-    <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'assets/js/wow.min.js' %}"></script>
-    <script src="{% static 'assets/js/progress-bar.min.js' %}"></script>
-    <script src="{% static 'assets/js/isotope.pkgd.min.js' %}"></script>
-    <script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
-    <script src="{% static 'assets/js/count-to.js' %}"></script>
-    <script src="{% static 'assets/js/YTPlayer.min.js' %}"></script>
-    <script src="{% static 'assets/js/validnavs.js' %}"></script>
-    <script src="{% static 'assets/js/main.js' %}"></script>
+<script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
+<script src="{% static 'assets/js/popper.min.js' %}"></script>
+<script src="{% static 'assets/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'assets/js/jquery.appear.js' %}"></script>
+<script src="{% static 'assets/js/jquery.easing.min.js' %}"></script>
+<script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
+<script src="{% static 'assets/js/modernizr.custom.13711.js' %}"></script>
+<script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'assets/js/wow.min.js' %}"></script>
+<script src="{% static 'assets/js/progress-bar.min.js' %}"></script>
+<script src="{% static 'assets/js/isotope.pkgd.min.js' %}"></script>
+<script src="{% static 'assets/js/imagesloaded.pkgd.min.js' %}"></script>
+<script src="{% static 'assets/js/count-to.js' %}"></script>
+<script src="{% static 'assets/js/YTPlayer.min.js' %}"></script>
+<script src="{% static 'assets/js/validnavs.js' %}"></script>
+<script src="{% static 'assets/js/main.js' %}"></script>
 
 </body>
+
 </html>
