--- a/submission-lab2.1/lab2/main/templates/creative-agency.html
+++ b/submission-lab2.1/lab2/main/templates/creative-agency.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -50,158 +52,7 @@
 
     <!-- Header 
     ============================================= -->
-    <header>
-        <!-- Start Navigation -->
-        <nav class="navbar mobile-sidenav attr-border navbar-sticky navbar-default validnavs navbar-fixed white no-background">
-
-
-            <div class="container d-flex justify-content-between align-items-center">            
-
-                <!-- Start Header Navigation -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <a class="navbar-brand" href="index.html">
-                        <img src="{% static 'assets/img/logo-light.png' %}" class="logo logo-display" alt="Logo">
-                        <img src="{% static 'assets/img/logo.png' %}" class="logo logo-scrolled" alt="Logo">
-                    </a>
-                </div>
-                <!-- End Header Navigation -->
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="navbar-menu">
-
-                    <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                        <i class="fa fa-times"></i>
-                    </button>
-                    
-                    <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle active" data-toggle="dropdown" >Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="index.html">App Landing</a></li>
-                                <li><a href="index-2.html">Software Landing</a></li>
-                                <li><a href="creative-agency.html">Creative Agency <span class="badge">New</span></a></li>
-                                <li><a href="it-solutions.html">It Solutions <span class="badge">New</span></a></li>
-                                <li><a href="business.html">Business <span class="badge">New</span></a></li>
-                                <li><a href="index-5.html">Startup Landing</a></li>
-                                <li><a href="index-3.html">Saas Landing</a></li>
-                                <li><a href="index-4.html">Data Science</a></li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Onepage</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="index-op.html">App Landing</a></li>
-                                        <li><a href="index-op-2.html">Software Landing</a></li>
-                                        <li><a href="index-op-5.html">Startup Landing</a></li>
-                                        <li><a href="index-op-3.html">Saas Landing</a></li>
-                                        <li><a href="index-op-4.html">Data Science</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        
-                        <li>
-                            <a class="smooth-menu" href="#expertise">expertise</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#portfolio">portfolio</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#about">about</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#blog">blog</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#contact">contact</a>
-                        </li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-
-                <!-- Start Atribute Navigation -->
-                <div class="attr-nav attr-right">
-                    <ul>
-                        <li class="side-menu">
-                            <a href="#">
-                                <span class="bar-1"></span>
-                                <span class="bar-2"></span>
-                                <span class="bar-3"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- End Atribute Navigation -->
-
-                <!-- Start Side Menu -->
-                <div class="side">
-                    <a href="#" class="close-side"><i class="icon_close"></i></a>
-                    <div class="widget">
-                        <div class="logo">
-                            <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
-                        </div>
-                        <p>
-                            Arrived compass prepare an on as. Reasonable particular on my it in sympathize. Size now easy eat hand how. Unwilling he departure elsewhere dejection at. Heart large seems may purse means few blind.
-                        </p>
-                    </div>
-                    <div class="widget address">
-                        <div>
-                            <ul>
-                                <li>
-                                    <div class="content">
-                                        <p>Address</p> 
-                                        <strong>California, TX 70240</strong>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="content">
-                                        <p>Email</p> 
-                                        <strong>support@validtheme.com</strong>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="content">
-                                        <p>Contact</p> 
-                                        <strong>+44-20-7328-4499</strong>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="widget newsletter">
-                        <h4 class="title">Get Subscribed!</h4>
-                        <form action="#">
-                            <div class="input-group stylish-input-group">
-                                <input type="email" placeholder="Enter your e-mail" class="form-control" name="email">
-                                <span class="input-group-addon">
-                                    <button type="submit">
-                                        <i class="arrow_right"></i>
-                                    </button>  
-                                </span>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="widget social">
-                        <ul class="link">
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                        </ul>
-                    </div>
-
-                </div>
-                <!-- End Side Menu -->
-
-                <!-- Main Nav -->
-            </div>   
-            <!-- Overlay screen for menu -->
-            <div class="overlay-screen"></div>
-            <!-- End Overlay screen for menu -->
-        </nav>
-        <!-- End Navigation -->
-    </header>
+    {% block content %}
     <!-- End Header -->
 
     <!-- Start Banner 
@@ -776,141 +627,7 @@
         </div>
     </div>
     <!-- End Blog -->
-<!-- Start Footer 
-    ============================================= -->
-<footer class="bg-dark text-light">
-    <div class="container">
-        <div class="f-items default-padding">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 item">
-                    <div class="f-item about">
-                        <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
-                        <p>
-                            Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy
-                            for you are out. Fertile how old address did showing.
-                        </p>
-                        <form action="#">
-                            <input type="email" placeholder="Your Email" class="form-control" name="email">
-                            <button type="submit"> <i class="arrow_right"></i></button>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 item">
-                    <div class="f-item link">
-                        <h4 class="widget-title">Quick LInk</h4>
-                        <ul>
-                            <li>
-                                <a href="index.html"><i class="fas fa-angle-right"></i> Home</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> About us</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> Compnay History</a>
-                            </li>
-                            <li>
-                                <a href="services.html"><i class="fas fa-angle-right"></i> Features</a>
-                            </li>
-                            <li>
-                                <a href="blog-with-sidebar.html"><i class="fas fa-angle-right"></i> Blog Page</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> Login</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 item">
-                    <div class="f-item link">
-                        <h4 class="widget-title">Community</h4>
-                        <ul>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Career</a>
-                            </li>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Leadership</a>
-                            </li>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Strategy</a>
-                            </li>
-                            <li>
-                                <a href="services.html"><i class="fas fa-angle-right"></i> Services</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> History</a>
-                            </li>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Components</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 item">
-                    <div class="f-item contact-widget">
-                        <h4 class="widget-title">Contact Info</h4>
-                        <div class="address">
-                            <ul>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-home"></i>
-                                    </div>
-                                    <div class="content">
-                                        <strong>Address:</strong>
-                                        5919 Trussville Crossings Pkwy, Birmingham
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-envelope"></i>
-                                    </div>
-                                    <div class="content">
-                                        <strong>Email:</strong>
-                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone"></i>
-                                    </div>
-                                    <div class="content">
-                                        <strong>Phone:</strong>
-                                        <a href="tel:2151234567">+123 34598768</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Start Footer Bottom -->
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <p>&copy; Copyright 2021. All Rights Reserved by <a
-                            href="https://themeforest.net/user/validthemes/portfolio">validthemes</a></p>
-                </div>
-                <div class="col-lg-6 text-end link">
-                    <ul>
-                        <li>
-                            <a href="about-us.html">Terms</a>
-                        </li>
-                        <li>
-                            <a href="about-us.html">Privacy</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Support</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Footer Bottom -->
-</footer>
-<!-- End Footer -->
+{% endblock %}
 
 <!-- jQuery Frameworks
     ============================================= -->
