--- a/submission-lab2.1/lab2/main/templates/index-4.html
+++ b/submission-lab2.1/lab2/main/templates/index-4.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -48,135 +50,7 @@
 
     <!-- Header 
     ============================================= -->
-    <header>
-        <!-- Start Navigation -->
-        <nav class="navbar mobile-sidenav attr-border navbar-sticky navbar-default validnavs navbar-fixed dark no-background">
-
-
-            <div class="container-medium d-flex justify-content-between align-items-center">            
-
-                <!-- Start Header Navigation -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <a class="navbar-brand" href="index.html">
-                        <img src="{% static 'assets/img/logo.png' %}" class="logo" alt="Logo">
-                    </a>
-                </div>
-                <!-- End Header Navigation -->
-
-                <!-- Main Nav -->
-                <div class="main-nav-content">
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="navbar-menu">
-
-                        <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                            <i class="fa fa-times"></i>
-                        </button>
-                        
-                        <ul class="nav navbar-nav navbar-right text-white" data-in="fadeInDown" data-out="fadeOutUp">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle active" data-toggle="dropdown" >Home</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="index.html">App Landing</a></li>
-                                    <li><a href="index-2.html">Software Landing</a></li>
-                                    <li><a href="creative-agency.html">Creative Agency <span class="badge">New</span></a></li>
-                                    <li><a href="it-solutions.html">It Solutions <span class="badge">New</span></a></li>
-                                    <li><a href="business.html">Business <span class="badge">New</span></a></li>
-                                    <li><a href="index-5.html">Startup Landing</a></li>
-                                    <li><a href="index-3.html">Saas Landing</a></li>
-                                    <li><a href="index-4.html">Data Science</a></li>
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Onepage</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="index-op.html">App Landing</a></li>
-                                            <li><a href="index-op-2.html">Software Landing</a></li>
-                                            <li><a href="index-op-5.html">Startup Landing</a></li>
-                                            <li><a href="index-op-3.html">Saas Landing</a></li>
-                                            <li><a href="index-op-4.html">Data Science</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown dropdown-left">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Pages</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="about-us.html">About Us</a></li>
-                                    <li class="dropdown">
-                                        <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown" >Team Members</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="team.html">Team Style One</a></li>
-                                            <li><a href="team-2.html">Team Style Two</a></li>
-                                            <li><a href="team-details.html">Team Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                    <li><a href="404.html">Error Page</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown dropdown-left">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Projects</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown">
-                                        <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown" >Grid Style</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="project-2-colum.html">Project Style One</a></li>
-                                            <li><a href="projects.html">Project Style Two</a></li>
-                                            <li><a href="project-4-colum.html">Project Style Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="about-us.html" class="dropdown-toggle" data-toggle="dropdown" >Masonary Style</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="project-masonary-2-colum.html">Project Style One</a></li>
-                                            <li><a href="project-masonary-3-colum.html">Project Style Two</a></li>
-                                            <li><a href="project-masonary-4-colum.html">Project Style Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="project-details.html">Project Details</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown dropdown-left">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Services</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-details.html">Services Details</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown dropdown-left">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Blog</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="blog-standard.html">Blog Standard</a></li>
-                                    <li><a href="blog-with-sidebar.html">Blog With Sidebar</a></li>
-                                    <li><a href="blog-2-colum.html">Blog Grid Two Colum</a></li>
-                                    <li><a href="blog-3-colum.html">Blog Grid Three Colum</a></li>
-                                    <li><a href="blog-single.html">Blog Single</a></li>
-                                    <li><a href="blog-single-with-sidebar.html">Blog Single With Sidebar</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown dropdown-left">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Shop</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="shop.html">Shop Product</a></li>
-                                    <li><a href="shop-single.html">Shop Single</a></li>
-                                    <li><a href="shop-single-thumb-only.html">Shop Single Version Two</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div><!-- /.navbar-collapse -->
-
-                    <!-- Overlay screen for menu -->
-                    <div class="overlay-screen"></div>
-                    <!-- End Overlay screen for menu -->
-
-                </div>
-                <!-- Main Nav -->
-            </div>   
-        </nav>
-        <!-- End Navigation -->
-    </header>
+    {% block content %}
     <!-- End Header -->
 
     <!-- Start Banner 
@@ -877,141 +751,7 @@
         </div>
     </div>
     <!-- End Blog -->
-<!-- Start Footer 
-    ============================================= -->
-<footer class="bg-dark text-light">
-    <div class="container">
-        <div class="f-items default-padding">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 item">
-                    <div class="f-item about">
-                        <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
-                        <p>
-                            Excellence decisively nay man yet impression for contrasted remarkably. There spoke happy
-                            for you are out. Fertile how old address did showing.
-                        </p>
-                        <form action="#">
-                            <input type="email" placeholder="Your Email" class="form-control" name="email">
-                            <button type="submit"> <i class="arrow_right"></i></button>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 item">
-                    <div class="f-item link">
-                        <h4 class="widget-title">Quick LInk</h4>
-                        <ul>
-                            <li>
-                                <a href="index.html"><i class="fas fa-angle-right"></i> Home</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> About us</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> Compnay History</a>
-                            </li>
-                            <li>
-                                <a href="services.html"><i class="fas fa-angle-right"></i> Features</a>
-                            </li>
-                            <li>
-                                <a href="blog-with-sidebar.html"><i class="fas fa-angle-right"></i> Blog Page</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> Login</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 item">
-                    <div class="f-item link">
-                        <h4 class="widget-title">Community</h4>
-                        <ul>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Career</a>
-                            </li>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Leadership</a>
-                            </li>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Strategy</a>
-                            </li>
-                            <li>
-                                <a href="services.html"><i class="fas fa-angle-right"></i> Services</a>
-                            </li>
-                            <li>
-                                <a href="about-us.html"><i class="fas fa-angle-right"></i> History</a>
-                            </li>
-                            <li>
-                                <a href="services-details.html"><i class="fas fa-angle-right"></i> Components</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 item">
-                    <div class="f-item contact-widget">
-                        <h4 class="widget-title">Contact Info</h4>
-                        <div class="address">
-                            <ul>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-home"></i>
-                                    </div>
-                                    <div class="content">
-                                        <strong>Address:</strong>
-                                        5919 Trussville Crossings Pkwy, Birmingham
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-envelope"></i>
-                                    </div>
-                                    <div class="content">
-                                        <strong>Email:</strong>
-                                        <a href="mailto:info@validtheme.com">info@validtheme.com</a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone"></i>
-                                    </div>
-                                    <div class="content">
-                                        <strong>Phone:</strong>
-                                        <a href="tel:2151234567">+123 34598768</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Start Footer Bottom -->
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <p>&copy; Copyright 2021. All Rights Reserved by <a
-                            href="https://themeforest.net/user/validthemes/portfolio">validthemes</a></p>
-                </div>
-                <div class="col-lg-6 text-end link">
-                    <ul>
-                        <li>
-                            <a href="about-us.html">Terms</a>
-                        </li>
-                        <li>
-                            <a href="about-us.html">Privacy</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Support</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Footer Bottom -->
-</footer>
-<!-- End Footer -->
+{% endblock %}
 
 <!-- jQuery Frameworks
     ============================================= -->
